@@ -1,4 +1,3 @@
-#include "../build.h"
 #include "channel.h"
 #include <event2/buffer.h>
 #include <event2/keyvalq_struct.h>
